<resources>
    <string name="app_name">profile_screen_task</string>
    <string name="title">Set Information</string>
    <string name="name_field">Enter name</string>
    <string name="email_filed">Enter Email</string>
    <string name="age_field">Enter Age</string>
    <string name="submit_button">submit</string>
    <string name="name_value">Nrmeen</string>
    <string name="email_value">nrmeen@gmail.com</string>
    <string name="age_value">22</string>
    <string name="jop_value">Flutter Developer</string>
    <string name="contact">contact me</string>
    <string name="jop_field">Enter Jop</string>
</resources>