<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:paddingVertical="15dp"
    android:paddingHorizontal="15dp"
    android:background="@drawable/custom_background">



    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="480dp"
        android:layout_marginEnd="50dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:contentPadding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/grey"
        android:importantForAccessibility="no">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/color1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/name_field"
                android:inputType="textPersonName"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                android:layout_marginTop="50dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/email_filed"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/age_field"
                android:inputType="number"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                tools:layout_editor_absoluteX="-16dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_jop"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/jop_field"
                android:inputType="text"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_age"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_jop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>