<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreen"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:importantForAccessibility="no" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        tools:layout_editor_absoluteY="65dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_image"
            android:importantForAccessibility="no" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_value"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/email_icon"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="76dp"
        android:text="@string/email_value"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/email_icon"
        app:layout_constraintTop_toBottomOf="@id/name"
        style="@style/TextAppearance.AppCompat.Medium"/>

    <ImageView
        android:id="@+id/age_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/age_icon"
        app:layout_constraintTop_toBottomOf="@id/email_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:text="@string/age_value"
        android:textSize="25sp"
        style="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/age_icon"
        app:layout_constraintTop_toBottomOf="@id/email_icon" />

    <ImageView
        android:id="@+id/jop_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/jop_icon"
        app:layout_constraintTop_toBottomOf="@id/age_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/jop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:text="@string/jop_value"
        android:textSize="25sp"
        style="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/jop_icon"
        app:layout_constraintTop_toBottomOf="@id/age_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/contact"
        android:background="@color/color2"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/jop_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/linkedin_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/jop_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/githup_icon"
        android:clickable="true"
        android:backgroundTint="@color/color2_light"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/linkedin_icon"
            app:layout_constraintTop_toBottomOf="@id/jop_icon"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/githup_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/jop_icon"
        app:layout_constraintStart_toEndOf="@id/linkedin_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/facebook_icon"
        android:backgroundTint="@color/color2_light"
        android:clickable="true"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/jop_icon"
            app:srcCompat="@drawable/githup_icon"
            android:importantForAccessibility="no" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/facebook_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/jop_icon"
        app:layout_constraintStart_toEndOf="@id/githup_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color2_light"
        android:clickable="true"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/jop_icon"
            app:srcCompat="@drawable/facebook_icon"
            android:importantForAccessibility="no" />
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>